2007-11-05  Andy Wingo  <wingo@pobox.com>

	* flumotion/admin/text/view.py (AdminTextView.getEntry): Move here
	from admin.py:AdminModel, and make not a defgen.

	* flumotion/admin/admin.py
	(AdminClientFactory.gotDeferredLogin.error): Simplify to not be a
	defer generator. See #385.
	(AdminModel.getEntry): Removed this defgen, it has no more
	callers. componentview.py has what should be done.
	(AdminModel.reload_async): Refactor to not be a defgen; still
	krappy.

	* flumotion/admin/gtk/componentview.py: Remove unneeded import.

2007-11-05  Johan Dahlin  <johan@gnome.org>

	* flumotion/ui/fgtk.py (FVUMeter.do_realize): Fix inconsistent tabbing
	found by reindent.py

	* flumotion/common/Makefile.am: Remove accidentally commited changes

2007-11-05  Michael Smith <msmith@fluendo.com>

	* flumotion/common/netutils.py:
	  Document two methods in the routing table class.

2007-11-05  Johan Dahlin  <johan@gnome.org>

	* all python files in the tree: run reindent.py, fixes #789

2007-11-05  Andy Wingo  <wingo@pobox.com>

	* flumotion/common/medium.py (BaseMedium.runBundledFunction)
	(BaseMedium.getBundledFunction): Refactor to not be defer
	generators. See #385.

	* flumotion/manager/manager.py (Vishnu._componentStopNoAvatar)
	(Vishnu._componentStopWithAvatar, Vishnu.componentStop): Split the
	ballooning componentStop function into parts. Only set lost
	components to sleeping if the worker does not detect a running job
	with that PID. Fixes #787.

	* flumotion/test/test_component_bouncers_component.py
	(TrivialBouncerTest.setKeycardExpireInterval): Fondle the bouncer
	better.

	* flumotion/component/bouncers/plug.py (BouncerPlug): Fix up to
	use a Poller instead of rolling our own timeouts, like in
	bouncer.py.

	* flumotion/component/bouncers/bouncer.py (Bouncer): Expire
	keycards every 2 minutes instead of every 60. Makes memory usage
	more stable.
	(Bouncer.init, Bouncer.setEnabled, Bouncer._expire)
	(Bouncer.authenticate, Bouncer.addKeycard, Bouncer.removeKeycard)